--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ PKG-INFO
 requires.txt
 SOURCES.txt
 top_level.txt
+src/models_dir/pytorch_cache/Kim_Vocal_2/Kim_Vocal_2.onnx.pt
+src/models_dir/pytorch_cache/Reverb_HQ_By_FoxJoy/Reverb_HQ_By_FoxJoy.onnx.pt
+123
+.cursorignore
